@@ -28,6 +28,7 @@ import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.ENERGY_
 import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.HEATING_MARGIN_PARAMETER;
 import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.LOCATION;
 import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.POWER_CONSUMPTION_PARAMETER;
+import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.POWER_METER;
 import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.STATUS_PARAMETER;
 import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.PRESENT_PARAMETER;
 import static com.sentrysoftware.matrix.common.helpers.HardwareConstants.TEMPERATURE_PARAMETER_UNIT;
@@ -42,8 +43,8 @@ import static com.sentrysoftware.matrix.model.alert.AlertConditionsBuilder.UP_AL
 public class Target implements IMetaMonitor {
 
 	private static final String CONSEQUENCE_MESSAGE = "All connectors relying on this protocol to collect data will not work anymore. The components detected through these connectors will no longer be monitored.";
-	
-	private static final List<String> METADATA = Collections.singletonList(LOCATION);
+
+	private static final List<String> METADATA = List.of(LOCATION, POWER_METER);
 
 	public static final MetaParameter AMBIENT_TEMPERATURE = MetaParameter.builder()
 			.basicCollect(false)
